fix: toc's scrollbar

--- a/src/pages/Examples/index.module.less
+++ b/src/pages/Examples/index.module.less
@@ -249,7 +249,7 @@
   font-size: 12px;
   background: #fff;
   max-height: 100vh;
-  overflow: scroll;
+  overflow: auto;
 
   position: sticky;
   top: 0;
